--- a/apps/pizza/src/app/pizza/pizza.component.html
+++ b/apps/pizza/src/app/pizza/pizza.component.html
@@ -1,7 +1,17 @@
-<img src="assets/cheese_pizza.jpeg" />
+<img [src]="imgUrl$ | async" />
 
-<button>Add Pepperonni</button>
+<ng-container *ngrxLet="hasPepperoni$ as hasPepperoni">
+  <button data-cy="add_pepperoni" (click)="pepperoniClick(hasPepperoni)">
+    {{ hasPepperoni ? 'Remove' : 'Add' }}
+    Pepperonni
+  </button>
+</ng-container>
 
-<button>Add Sausage</button>
+<ng-container *ngrxLet="hasSausage$ as hasSausage">
+  <button data-cy="add_sausage" (click)="sausageClick(hasSausage)">
+    {{ hasSausage ? 'Remove' : 'Add' }}
+    Sausage
+  </button>
+</ng-container>
 
-<h1>Price: $----</h1>
+<h1 data-cy="pizza__price">Price: $ {{ price$ | async }}</h1>
